fix gap

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -9,7 +9,7 @@
   background-repeat: no-repeat;
   background-position: left-top;
   background-size: 100% auto;
-  margin-top: -1px;
+  margin-top: -2px;
   text-align: center;
   min-height: 300px;
 }
@@ -18,11 +18,6 @@
   position: absolute;
   top: 129px;
   width: 100%;
-}
-
-.center-div {
-  background-color: white;
-
 }
 
 .home-logo {
